RESOLVED FIXED178607
Fix conditions in HTMLSourceElement and HTMLTrackElement's insertedInto and removedFrom
https://bugs.webkit.org/show_bug.cgi?id=178607
Summary Fix conditions in HTMLSourceElement and HTMLTrackElement's insertedInto and r...
Ryosuke Niwa
Reported 2017-10-20 16:10:18 PDT
Right now, HTMLSourceElement and HTMLTrackElement's insertedInto and removedFrom contain obviously wrong code. Fix them as I've learned these elements are only effective when they're a direct child of HTMLMediaElement.
Attachments
Cleanup (4.49 KB, patch)
2017-10-20 16:15 PDT, Ryosuke Niwa
no flags
Wrote change log (4.85 KB, patch)
2017-10-20 16:19 PDT, Ryosuke Niwa
eric.carlson: review+
Ryosuke Niwa
Comment 1 2017-10-20 16:15:49 PDT
Build Bot
Comment 2 2017-10-20 16:17:28 PDT
Attachment 324462 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Ryosuke Niwa
Comment 3 2017-10-20 16:19:53 PDT
Created attachment 324463 [details] Wrote change log
Ryosuke Niwa
Comment 4 2017-10-20 16:51:41 PDT
Thanks for the review!
Ryosuke Niwa
Comment 5 2017-10-20 17:03:20 PDT
Radar WebKit Bug Importer
Comment 6 2017-11-15 13:01:45 PST
Note You need to log in before you can comment on or make changes to this bug.